# Direct12PBRRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.txt  Command.txt  README.md  build.bat  gitignore.txt  vcpkg.json
DeferredRendering/: CMakeLists.txt
DeferredRendering/Asset/Model/Barrel/: Barrel_Mat_0.json  Barrel_Mesh.json  Barrel_Model.json  Barrel_barrel_ao.json  Barrel_barrel_color.json  Barrel_barrel_metallic.json  Barrel_barrel_normal.json  Barrel_barrel_roughness.json
DeferredRendering/Asset/Model/BrickWall/: BrickWall_Mat_0.json  BrickWall_Model.json
DeferredRendering/Asset/Model/CigarBox/: CigarBox_Mat_0.json  CigarBox_Mat_1.json
DeferredRendering/Asset/Model/LightImpostor/: gen_light_impostor.py
DeferredRendering/Asset/Model/LightImpostor/Material/: light_impostor_mat_0.json  light_impostor_mat_1.json  light_impostor_mat_2.json  light_impostor_mat_3.json  light_impostor_mat_4.json  light_impostor_mat_5.json  light_impostor_mat_6.json  light_impostor_mat_7.json
DeferredRendering/Asset/Model/LightImpostor/Model/: light_impostor_model_0.json  light_impostor_model_1.json  light_impostor_model_2.json  light_impostor_model_3.json  light_impostor_model_4.json  light_impostor_model_5.json  light_impostor_model_6.json  light_impostor_model_7.json
DeferredRendering/Asset/Model/Lighter/: Lighter_Mat_0.json  Lighter_Model.json
DeferredRendering/Asset/Model/Revolver/: Revolver_Mat_0.json  Revolver_Mesh.json  Revolver_Model.json  Revolver_revolver_albedo.json  Revolver_revolver_metallic.json  Revolver_revolver_normal.json  Revolver_revolver_roughness.json
DeferredRendering/Asset/Model/Rock/: Rock_Mat_0.json  Rock_Mesh.json  Rock_Model.json  Rock_rock_low_Base_Color.json  Rock_rock_low_Metallic.json  Rock_rock_low_Mixed_AO.json  Rock_rock_low_Normal_DirectX.json  Rock_rock_low_Roughness.json
DeferredRendering/Asset/Model/Sofa/: Sofa_Mat_0.json  Sofa_Mat_1.json  Sofa_Mat_2.json
DeferredRendering/Asset/Model/Sphere/: gen_sphere_file.py  gen_sphere_scene_section.py  sphere_Mat.json  sphere_Mesh.json  sphere_Model.json  sphere_def.py
DeferredRendering/Asset/Model/Sphere/RustSteel/: rust_sphere_mat.json  rust_sphere_model.json
DeferredRendering/Asset/Model/Sphere/SphereMaterial/: sphere_R0_M0.json  sphere_R0_M1.json  sphere_R0_M2.json  sphere_R0_M3.json  sphere_R0_M4.json  sphere_R1_M0.json  sphere_R1_M1.json  sphere_R1_M2.json  sphere_R1_M3.json  sphere_R1_M4.json  sphere_R2_M0.json  sphere_R2_M1.json  sphere_R2_M2.json  sphere_R2_M3.json  sphere_R2_M4.json  sphere_R3_M0.json  sphere_R3_M1.json  sphere_R3_M2.json  sphere_R3_M3.json  sphere_R3_M4.json  sphere_R4_M0.json  sphere_R4_M1.json  sphere_R4_M2.json  sphere_R4_M3.json  sphere_R4_M4.json
DeferredRendering/Asset/Model/Sphere/SphereModel/: sphere_R0_M0.json  sphere_R0_M1.json  sphere_R0_M2.json  sphere_R0_M3.json  sphere_R0_M4.json  sphere_R1_M0.json  sphere_R1_M1.json  sphere_R1_M2.json  sphere_R1_M3.json  sphere_R1_M4.json  sphere_R2_M0.json  sphere_R2_M1.json  sphere_R2_M2.json  sphere_R2_M3.json  sphere_R2_M4.json  sphere_R3_M0.json  sphere_R3_M1.json  sphere_R3_M2.json  sphere_R3_M3.json  sphere_R3_M4.json  sphere_R4_M0.json  sphere_R4_M1.json  sphere_R4_M2.json  sphere_R4_M3.json  sphere_R4_M4.json
DeferredRendering/Asset/Model/Suitcase/: Suitcase_Mat_0.json  Suitcase_Mesh.json  Suitcase_Model.json  Suitcase_Vintage_Suitcase_AO.json  Suitcase_Vintage_Suitcase_Colour.json  Suitcase_Vintage_Suitcase_Metallic.json  Suitcase_Vintage_Suitcase_Normal_OpenGL.json  Suitcase_Vintage_Suitcase_Roughness.json
DeferredRendering/Asset/Model/TerrainQuad/: TerrainQuad_Mat_0.json  TerrainQuad_Model.json
DeferredRendering/Asset/Model/Tile/: Tile_Mat_0.json  Tile_Mesh.json  Tile_Model.json  Tile_tile_albedo.json  Tile_tile_ao.json  Tile_tile_metallic.json  Tile_tile_normal_dx.json  Tile_tile_roughness.json
DeferredRendering/Asset/Scene/: main.json
DeferredRendering/Asset/SkyBox/: HDRWild.json
DeferredRendering/Shader/: blit.hlsli  bloom_merge.hlsl  bloom_prefilter.hlsl  bloom_upsample_add.hlsl  blur.hlsli  blur_horizontal.hlsl  blur_vertical.hlsl  brdf.hlsli  clustered.hlsli  clustered_compute.hlsl  clustered_culling.hlsl  deferred_shading.hlsl  env_map_gen.hlsl  gbuffer.hlsl  global.hlsli  hdr_average_histogram.hlsl  hdr_luminance_histogram.hlsl  hdr_tone_mapping.hlsl  precompute_brdf.hlsl  skybox.hlsl
DeferredRendering/Source/: Main.cpp
Engine/: CMakeLists.txt
Engine/Include/: App.h  Fundation.h
Engine/Include/Plateform/Windows/: Input.h  WindowsUtils.h
Engine/Include/Renderer/: Camera.h  FrameGraph.h  FrameGraphResource.h  RenderScheduler.h  Scene.h  Texture.h
Engine/Include/Renderer/Device/Direct12/: D3D12CommandList.h  D3D12Device.h  D3DUtils.h  DescriptorAllocator.h  DeviceResource.h  MemoryAllocator.h
Engine/Include/Renderer/Pipeline/: DeferredPipeline.h  IPipeline.h
Engine/Include/Resource/: BasicStorage.h  DefaultResource.h  ResourceDef.h  ResourceLoader.h  Shader.h  TextureCompression.h  VertexLayout.h  tiny_obj_loader.h
Engine/Include/Utils/: Allocator.h  Console.h  ConsoleCommand.h  Constexpr.h  LooseOctree.h  MathLib.h  Misc.h  Reflection.h  ReflectionDef.h  SH.h  Serialization.h  Thread.h
Engine/Include/Utils/Time/: GameTimer.h
Engine/Source/: App.cpp
Engine/Source/Plateform/Windows/: Input.cpp  WindowsUtils.cpp
Engine/Source/Renderer/: Camera.cpp  FrameGraph.cpp  RenderScheduler.cpp  Scene.cpp
Engine/Source/Renderer/Pipeline/: DeferredPipeline.cpp  IPipeline.cpp
Engine/Source/Resource/: BasicStorage.cpp  DefaultResource.cpp  ResourceDef.cpp  ResourceLoader.cpp  Shader.cpp  TextureCompression.cpp  tiny_obj_loader.cc
Engine/Source/Utils/: Console.cpp  ConsoleCommand.cpp  MathLib.cpp  Misc.cpp  SH.cpp  Thread.cpp
SceneTest/Test/: CMakeLists.txt
SceneTest/Test/Asset/Model/Sofa/: Sofa_Model.json
SceneTest/Test/Shader/: clustered.hlsli  clustered_culling.hlsl  env_map_gen.hlsl  precompute_brdf.hlsl  skybox.hlsl  test.hlsl
SceneTest/Test/Source/: Main.cpp
UnitTest/: CMakeLists.txt
UnitTest/Source/: MemoryAllocatorTest.cpp  ThreadPoolTest.cpp
(+6 files in other folders)
